src/test/ui/parser/pat-lt-bracket-2.stderr
error: expected one of `:` or `@`, found `<`
  --> $DIR/pat-lt-bracket-2.rs:3:7
   |
LL | fn a(B<) {}
   |       ^ expected one of `:` or `@` here

error: aborting due to previous error

